bottom padding incremented to avoid covering content + little text change to avoid a weird space xD

--- a/css/basic.css
+++ b/css/basic.css
@@ -40,7 +40,7 @@ position:relative;
 
 #content{
 	padding-top: 100px;	/* Height of the header + desplazamiento*/
-	padding-bottom:30px; /* Height of the footer*/
+	padding-bottom: 60px; /* Height of the footer*/
 	padding-left: 12%;
 	padding-right: 12%;
 	background: #1f1f1f;
@@ -102,7 +102,7 @@ position:relative;
 	padding-top: 10px;
 	width: 100%;
 	height: 30px;
-  	bottom: 0;
+  bottom: 0;
 	left: 0;
 	text-align: center;
 	background: #0d0d0d;
